@@ -100,7 +100,9 @@ public class DefenseUtils
 
     /**
      * Determine what {@link DefenseType} is present at a specific location
-     * on a {@link ShipAPI}.
+     * on a {@link ShipAPI}. This method will consider points not inside of the
+     * ship's bounds as a miss even if said point is still within the armor
+     * grid.
      *
      * @param ship The {@link ShipAPI} to examine.
      * @param loc  The location to check at.
