@@ -14,6 +14,8 @@ Added org.lazywizard.lazylib.campaign.orbits.EllipticalOrbit:
 Changes to AIUtils:
  - Added getBestInterceptPoint(Vector2f point, float speed,
    CombatEntityAPI target) - all credit goes to Dark.Revenant
+Changes to CargoUtils:
+ - Added moveMothballedShips(CargoAPI from, CargoAPI to)
 Changes to CollisionUtils:
  - Fixed getCollisionPoint() not properly updating the bounds facing/position
 Changes to CombatUtils:
